--- a/app/globals.css
+++ b/app/globals.css
@@ -3,9 +3,11 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --primary-color: #231F20;
+  --secondary-color: #BB4430;
+  --ternary-color: #7EBDC2;
+  --cuaternary-color: #F3DFA2;
+  --quinary-color: #EFE6DD;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,5 +19,5 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  color: rgb(var(--primary-color));
 }
