--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@
   --ternary-color: #7EBDC2;
   --cuaternary-color: #F3DFA2;
   --quinary-color: #EFE6DD;
+  --light-color: #f4efea;
 }
 
 @media (prefers-color-scheme: dark) {
